syntax = "proto3";
package auth;

// Optional: Set Go package path for generated Go code
option go_package = "./protomodels;protomodels";

// Login DTO
message LoginDto {
  string email = 1;
  string password = 2;
}

// SignUp DTO
message SignUpDto {
  string name = 1;
  int32 age = 2;
  string email = 3;
  string password = 4;
}

// AccountModel DTO
message AccountModelDto {
  string id = 1; // UUID as string
  string name = 2;
  string email = 3;
  bool verified = 4;
  string created_at = 5;
}

message AccountListDto {
  repeated AccountModelDto accounts = 1;
}
